package LEBOCQTitouan.edu.model.entities.planet;

public class Cell {
}
