@startuml
'https://plantuml.com/class-diagram

class Coordinate {}
class Robot {}
class RobotMapper {
    + robotCoordinateHashMap: HashMap<Robot, Coordinate>
    + getCoordinate(robot: Robot): Coordinate
}
class InterMediator

InterMediator --> RobotMapper
InterMediator -> "0..*" Robot
InterMediator --> Planet

RobotMapper --> Robot
RobotMapper --> Coordinate

class Planet {}
class Cell {}

Planet *--> "0..*" Cell : List[List[Cell]]

@enduml